<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Button
	    android:id="@+id/bDownload"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/downloadMA" />
    	
	<Button
	    android:id="@+id/bUpdate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/bDownload"
	    android:layout_alignParentTop="true"
	    android:text="@string/updateMA" />

	<Button
	    android:id="@+id/bLoad"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_toRightOf="@+id/bUpdate"
	    android:text="@string/loadMA" />
	
	<ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/bDownload"
        android:layout_below="@+id/bDownload" >

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_runMA" />
    </ScrollView>

</RelativeLayout>
